--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html>
   <head>
     <title>My Portfolio</title>
+
+    
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
-    
+
+<div id="app">{{ message }}</div>
+
+<script>
+  const { createApp, ref } = Vue
+
+  createApp({
+    setup() {
+      const message = ref('Hello vue!')
+      return {
+        message
+      }
+    }
+  }).mount('#app')
+</script>
   </body>
 </html>
