--- a/itew6_stuff/1Prelim/Quiz2/shoppingcart/index.html
+++ b/itew6_stuff/1Prelim/Quiz2/shoppingcart/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- import from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,8 +18,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-
-    <title>Task Handler</title>
+    
+    <title>Shopping Cart</title>
   </head>
   <body>
     <div id="app"></div>
